re PR bootstrap/14356 (gcc.c:3661: error: assignment of read-only location)

PR bootstrap/14356
	* gcc.c (process_command): Remove const-qualification from argv.
	(main): Likewise.

From-SVN: r78750